--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.readbook">
-
-
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false" />
@@ -14,33 +12,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:exported="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main2"
+
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="com.package.name.MyActivity"/>
                 <category android:name="android.intent.category.LAUNCHER" />
-
                 <data
                     android:host=""
                     android:scheme="file"
                     tools:ignore="AppLinkUrlError" />
-                <data android:mimeType="application/epub+zip" />
-                <data android:mimeType="application/epub" />
-                <data android:mimeType="application/fb2" />
-                <data android:mimeType="application/fb2.zip" />
-                <data android:mimeType="application/fb2+zip" />
-                <data android:mimeType="application/x-fictionbook+xml" />
-                <data android:mimeType="application/x-fictionbook" />
-                <data android:mimeType="application/x-fb2" />
-                <data android:mimeType="application/zip" />
-                <data android:mimeType="application/x-zip-compressed" />
-                <data android:mimeType="application/x-compressed-zip" />
-                <data android:mimeType="application/x-fictionbook+zip" />
                 <data android:mimeType="text/html" />
             </intent-filter>
 
@@ -51,8 +38,6 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-                <action android:name="com.package.name.MyActivity"/>
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
         </activity>
